--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -32,11 +32,25 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
-            <button class="btn btn-round" data-toggle="modal" data-target="#loginModal">
-                Login<i class="material-icons">assignment</i>
+            <div class="collapse navbar-collapse">
 
-            </button>
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a href="login.html" class="nav-link">
+                            Login
+                            <div class="ripple-container"></div>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="register.html" class="btn btn-rose btn-raised btn-round " data-toggle="dropdown">
+                            SignUp
+                        </a>
+                    </li>
+
+                </ul>
         </div>
+
     </nav>
 
     <div class="page-header header-filter" data-parallax="true" style="background-image: url('img/toy-car-3.jpg');
@@ -78,7 +92,7 @@
                         </div>
                     </div>
                 </div>
-            </div>\
+            </div>
         </div>
     </div>
 </header>
@@ -177,16 +191,16 @@
 </footer>
 
 <!--   Core JS Files   -->
-<script src="jsore/jquery.min.js" type="text/javascript"></script>
-<script src="jsore/popper.min.js" type="text/javascript"></script>
-<script src="jsore/bootstrap-material-design.min.js" type="text/javascript"></script>
-<script src="jslugins/moment.min.js"></script>
+<script src="../static/js/core/jquery.min.js" type="text/javascript"></script>
+<script src="../static/js/core/popper.min.js" type="text/javascript"></script>
+<script src="../static/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+<script src="../static/js/plugins/moment.min.js"></script>
 <!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
-<script src="jslugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+<script src="../static/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
 <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-<script src="jslugins/nouislider.min.js" type="text/javascript"></script>
+<script src="../static/js/plugins/nouislider.min.js" type="text/javascript"></script>
 <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
-<script src="jsaterial-kit.js?v=2.0.5" type="text/javascript"></script>
+<script src="../static/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
 <script>
     $(document).ready(function () {
         //init DateTimePickers
