--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -50,7 +50,7 @@
 
                 </ul>
             </div>
-
+        </div>
     </nav>
 
     <div class="page-header header-filter" data-parallax="true" style="background-image: url('img/toy-car-3.jpg');
@@ -100,8 +100,16 @@
 <div class="main main-raised">
     <div class="container">
         <div class="section text-center">
-
-            <h2 class="title">Top users</h2>
+            <h2 class="title">Trips</h2>
+            <div class="row" id="trip-body">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="main main-raised" style="margin-top: 20px;">
+    <div class="container">
+        <div class="section text-center">
+            <h2 class="title">Top drivers</h2>
             <table class="table table-striped">
                 <thead>
                 <tr>
@@ -142,7 +150,7 @@
 <script src="../static/js/plugins/nouislider.min.js" type="text/javascript"></script>
 <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
 <script src="../static/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
-<script src="scripts/top-ten-drivers.js" type="text/javascript"></script>
+<script src="scripts/index-load.js" type="text/javascript"></script>
 <script>
     $(document).ready(function () {
         //init DateTimePickers
