--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,21 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-	<title>Signin Template for Bootstrap</title>
+    <title>Signin Template for Bootstrap</title>
 
-	<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
 
-	<!-- Bootstrap core CSS -->
-	<link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap core CSS -->
+    <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-	<!-- Custom styles for this template -->
-	<link href="https://getbootstrap.com/docs/4.0/examples/sign-in/signin.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="https://getbootstrap.com/docs/4.0/examples/sign-in/signin.css" rel="stylesheet">
 </head>
 <body class="text-center">
+
+<form class="form-signin">
+
+    <div style="text-align:  center;">
+        <i id="wrong-pass" class="text-hide">It seems like your username and password don't match.</i>
+<!--        <i id="existing-user" class="hide login-error">It seems like there is already a user with that username.</i>-->
+<!--        <i id="disabled-user" class="hide login-error">It seems like this user has been disabled.</i>-->
+    </div>
+    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <label for="username" class="sr-only">Email address</label>
+    <input type="text" name="username" id="username" class="form-control" placeholder="username" required autofocus>
+    <label for="password" class="sr-only">Password</label>
+    <input type="password" name="password" id="password" class="form-control" placeholder="Password" required>
+    <div class="checkbox mb-3">
+        <label>
+            <input type="checkbox" value="remember-me"> Remember me
+        </label>
+    </div>
+    <button class="btn btn-lg btn-primary btn-block" type="button" onclick="login()">Sign in</button>
+    <p class="mt-5 mb-3 text-muted"><a href="register.html">Register</a> &copy; 2019</p>
+
+</form>
+
+
+
+<script src="js/login.js"> </script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
 </body>
 </html>
