--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,118 +13,22 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
     <!-- Material Kit CSS -->
     <link href="css/material-kit.css?v=2.0.5" rel="stylesheet"/>
+
+
     <!-- jQuery - Google Content Delivery Network -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <link href="css/main.css" rel="stylesheet"/>
+
 </head>
 
 <body>
 <header>
-    <nav class="navbar navbar-color-on-scroll bg-dark fixed-top navbar-expand-lg" color-on-scroll="100">
-        <div class="container">
-            <div class="navbar-translate">
-                <a class="navbar-brand" href="/">
-                    Carpooling </a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-            </div>
-            <div class="collapse navbar-collapse">
 
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a href="login.html" class="nav-link">
-                            Login
-                            <div class="ripple-container"></div>
-                        </a>
-                    </li>
-
-                    <li class="nav-item">
-                        <a href="register.html" class="btn btn-rose btn-raised btn-round " data-toggle="dropdown">
-                            SignUp
-                        </a>
-                    </li>
-
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <div class="page-header header-filter" data-parallax="true" style="background-image: url('img/toy-car-3.jpg');
-            background-size: auto;">
-        <div class="container">
-            <div class="row">
-
-                <div class="col-lg-8 mx-auto">
-
-                    <div class="title">
-                        <h2 class="title">Connects people looking to travel with drivers heading the same way</h2>
-                    </div>
-                    <div class="col-lg-8 mx-auto">
-                        <div class="d-none d-sm-block">
-                            <div class="d-flex flex-row" align="center">
-                                <div class="p-4">
-                                    <i class="fa fa-angle-right fa-3x"></i>
-                                </div>
-                                <div class="p-4 align-self-center">
-                                    <h3>It's Economic</h3>
-                                </div>
-                            </div>
-                            <div class="d-flex flex-row">
-                                <div class="p-4">
-                                    <i class="fa fa-angle-right fa-3x"></i>
-                                </div>
-                                <div class="p-4 align-self-center">
-                                    <h3>It's Ecological</h3>
-                                </div>
-                            </div>
-                            <div class="d-flex flex-row">
-                                <div class="p-4">
-                                    <i class="fa fa-angle-right fa-3x"></i>
-                                </div>
-                                <div class="p-4 align-self-center">
-                                    <h3>It's Flexible</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 </header>
 
-<div class="main main-raised">
-    <div class="container">
-        <div class="section text-center">
-            <h2 class="title">Trips</h2>
-            <div class="row" id="trip-body">
-            </div>
-        </div>
-    </div>
-</div>
-<div class="main main-raised" style="margin-top: 20px;">
-    <div class="container">
-        <div class="section text-center">
-            <h2 class="title">Top drivers</h2>
-            <table class="table table-striped">
-                <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col" id="rating">Driver Rating</th>
-                    <th scope="col">Username</th>
-                    <th scope="col">FirstName</th>
-                    <th scope="col">LastName</th>
-                </tr>
-                </thead>
-                <tbody id="top-ten-drivers">
-                </tbody>
-            </table>
-        </div>
-    </div>
+<div id="content">
+
 </div>
 
 <footer class="footer footer-default">
@@ -150,16 +54,19 @@
 <script src="../static/js/plugins/nouislider.min.js" type="text/javascript"></script>
 <!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
 <script src="../static/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
-<script src="scripts/index-load.js" type="text/javascript"></script>
-<script>
-    $(document).ready(function () {
-        //init DateTimePickers
-        materialKit.initFormExtendedDatetimepickers();
 
-        // Sliders Init
-        materialKit.initSliders();
-    });
-</script>
+<!--   Main JS   -->
+<script src="js/main.js"></script>
+
+<!--   Login JS   -->
+<script src="js/login.js"></script>
+
+<!--   Authorize JS   -->
+<script src="js/auth.js"></script>
+
+<!--   Content JS   -->
+<script src="scripts/index-load.js" type="text/javascript"></script>
+
 </body>
 
 </html>
