Changed profile page view

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -45,7 +45,7 @@
                             <div class="ripple-container"></div>
                         </a>
                     </li>
-                    <li class="nav-item unauthorized-button" href="profile.html">
+                    <li class="nav-item unauthorized-button" onclick="navigateToRegister()">
                         <a id="register-button" class="btn btn-rose btn-raised btn-round"
                            data-toggle="dropdown">
                             SignUp
@@ -95,6 +95,11 @@
                         </div>
                         <input type="text" class="form-control" placeholder="First Name...">
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="label-control">Datetime Picker</label>
+                    <input type="text" class="form-control datetimepicker" value="10/05/2016"/>
                 </div>
 
                 <div class="form-group bmd-form-group">
