--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -1,3 +1,62 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Carpooling</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
+    <!-- Material Kit CSS -->
+    <link href="assets/css/material-kit.css?v=2.0.5" rel="stylesheet"/>
+
+    <!-- jQuery - Google Content Delivery Network -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <link href="assets/css/main.css" rel="stylesheet"/>
+</head>
+
+<body>
+<!--            Header and Navbar           -->
+<header>
+    <nav class="navbar bg-dark fixed-top navbar-expand-lg">
+        <div class="container">
+            <div class="navbar-translate">
+                <a class="navbar-brand" href="/">
+                    Carpooling </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ml-auto">
+
+                    <li class="nav-item authorized-button" onclick="navigateToProfile()">
+                        <a class="nav-link">
+                            My Profile
+                            <div class="ripple-container"></div>
+                        </a>
+                    </li>
+                    <li class="nav-item authorized-button" onclick="logout()">
+                        <a href="/" class="btn btn-rose btn-raised btn-round "
+                           data-toggle="dropdown">
+                            Logout
+                        </a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+
 <hr>
 <div class="container details profile-container">
     <div class="row">
@@ -12,7 +71,8 @@
                 <h6>Upload a different photo...</h6>
                 <input type="file" class="text-center center-block file-upload">
             </div>
-            </hr><br>
+            </hr>
+            <br>
 
         </div><!--/col-3-->
         <div class="col-sm-9">
@@ -23,7 +83,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="first_name"><h4>First name</h4></label>
+                                <h4><label for="first_name">First name</label></h4>
                                 <input type="text" class="form-control" name="first_name" id="first_name"
                                        placeholder="first name" title="enter your first name if any.">
                             </div>
@@ -31,7 +91,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="last_name"><h4>Last name</h4></label>
+                                <h4><label for="last_name">Last name</label></h4>
                                 <input type="text" class="form-control" name="last_name" id="last_name"
                                        placeholder="last name" title="enter your last name if any.">
                             </div>
@@ -40,7 +100,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="phone"><h4>Phone</h4></label>
+                                <h4><label for="phone">Phone</label></h4>
                                 <input type="text" class="form-control" name="phone" id="phone"
                                        placeholder="enter phone" title="enter your phone number if any.">
                             </div>
@@ -48,7 +108,7 @@
 
                         <div class="form-group">
                             <div class="col-xs-6">
-                                <label for="mobile"><h4>Mobile</h4></label>
+                                <h4><label for="mobile">Mobile</label></h4>
                                 <input type="text" class="form-control" name="mobile" id="mobile"
                                        placeholder="enter mobile number" title="enter your mobile number if any.">
                             </div>
@@ -56,7 +116,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="email"><h4>Email</h4></label>
+                                <h4><label for="email">Email</label></h4>
                                 <input type="email" class="form-control" name="email" id="email"
                                        placeholder="you@email.com" title="enter your email.">
                             </div>
@@ -64,7 +124,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="email"><h4>Location</h4></label>
+                                <h4><label for="email">Location</label></h4>
                                 <input type="email" class="form-control" id="location" placeholder="somewhere"
                                        title="enter a location">
                             </div>
@@ -72,7 +132,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="password"><h4>Password</h4></label>
+                                <h4><label for="password">Password</label></h4>
                                 <input type="password" class="form-control" name="password" id="password"
                                        placeholder="password" title="enter your password.">
                             </div>
@@ -80,7 +140,7 @@
                         <div class="form-group">
 
                             <div class="col-xs-6">
-                                <label for="password2"><h4>Verify</h4></label>
+                                <h4><label for="password2">Verify</label></h4>
                                 <input type="password" class="form-control" name="password2" id="password2"
                                        placeholder="password2" title="enter your password2.">
                             </div>
@@ -101,3 +161,46 @@
         </div><!--/tab-content-->
     </div><!--/col-9-->
 </div><!--/row-->
+
+<footer class="footer footer-default">
+    <div class="container">
+        <div class="copyright align-content-center">
+            &copy;
+            <script>
+                document.write(new Date().getFullYear())
+            </script>
+            Final project in Telerik academy
+        </div>
+    </div>
+</footer>
+
+<script src="assets/js/core/jquery.min.js" type="text/javascript"></script>
+<script src="assets/js/core/popper.min.js" type="text/javascript"></script>
+<script src="assets/js/core/bootstrap-material-design.min.js" type="text/javascript"></script>
+<script src="assets/js/plugins/moment.min.js"></script>
+<!--	Plugin for the Datepicker, full documentation here: https://github.com/Eonasdan/bootstrap-datetimepicker -->
+<script src="assets/js/plugins/bootstrap-datetimepicker.js" type="text/javascript"></script>
+<!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
+<script src="assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
+<!-- Place this tag in your head or just before your close body tag. -->
+<script async defer src="https://buttons.github.io/buttons.js"></script>
+<!-- Control Center for Material Kit: parallax effects, scripts for the example pages etc -->
+<script src="assets/js/material-kit.js?v=2.0.5" type="text/javascript"></script>
+
+<!--   Main JS   -->
+<script src="assets/js/main.js"></script>
+
+<!--   Login JS   -->
+<script src="assets/js/login.js"></script>
+
+<!--   Authorize JS   -->
+<script src="assets/js/auth.js"></script>
+
+<!--   Profile JS   -->
+<script src="assets/js/profile.js"></script>
+
+<!--   Content JS   -->
+<script src="assets/js/index-load.js" type="text/javascript"></script>
+
+</body>
+</html>
