Added passengers visibility in trip.

--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,4 +1,4 @@
-<div class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/toy-car-3.jpg');
+<div class="page-header header-filter" id="upperPart" data-parallax="true" style="background-image: url('assets/img/toy-car-3.jpg');
             background-size: auto;">
     <div class="container">
         <div class="row">
@@ -10,7 +10,7 @@
                 </div>
                 <div class="col-lg-8 mx-auto">
                     <div class="d-none d-sm-block">
-                        <div class="d-flex flex-row" align="center">
+                        <div class="d-flex flex-row">
                             <div class="p-4">
                                 <i class="fa fa-angle-right fa-3x"></i>
                             </div>
@@ -50,7 +50,7 @@
         </div>
     </div>
 </div>
-<div class="main main-raised" style="margin-top: 20px;">
+<div class="main main-raised" style="margin-top: 20px;" id="top-drivers">
     <div class="container">
         <div class="section text-center">
             <h2 class="title">Top drivers</h2>
