Added working apply button to single trip.

--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -1,4 +1,4 @@
-<div class="page-header header-filter" id="upperPart" data-parallax="true" style="background-image: url('assets/img/toy-car-3.jpg');
+<div id="upperPart" class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/toy-car-3.jpg');
             background-size: auto;">
     <div class="container">
         <div class="row">
@@ -49,6 +49,10 @@
             </div>
         </div>
     </div>
+</div>
+
+<div class="modal fade create-trip-modal" id="single-trip-modal" tabindex="-1" aria-labelledby="exampleModalLongTitle"
+     aria-hidden="true">
 </div>
 <div class="main main-raised" style="margin-top: 20px;" id="top-drivers">
     <div class="container">
