Changes in index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -77,6 +77,8 @@
     </nav>
 </header>
 
+<!-- Rate and change passenger status modal-->
+
 <!-- Modal Create Trip -->
 <div class="modal fade create-trip-modal" id="create-trip-modal" tabindex="-1" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
     <div class="modal-dialog">
