--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -77,10 +77,61 @@
     </nav>
 </header>
 
+<!--                            Containers ID's                         -->
+<!--    upperPart   -->
+<!--    easySearch  -->
+<!--    top-drivers -->
+
+<div id="upperPart" class="page-header header-filter" data-parallax="true" style="background-image: url('assets/img/toy-car-3.jpg');
+            background-size: auto;">
+    <div class="container">
+        <div class="row">
+
+            <div class="col-lg-8 mx-auto">
+
+                <div class="title">
+                    <h2 class="title">Connects people looking to travel with drivers heading the same way</h2>
+                </div>
+
+                <div class="col-lg-8 mx-auto">
+                    <div class="d-none d-sm-block">
+                        <div class="d-flex flex-row">
+                            <div class="p-4">
+                                <i class="fa fa-angle-right fa-3x"></i>
+                            </div>
+                            <div class="p-4 align-self-center">
+                                <h3>It's Economic</h3>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="p-4">
+                                <i class="fa fa-angle-right fa-3x"></i>
+                            </div>
+                            <div class="p-4 align-self-center">
+                                <h3>It's Ecological</h3>
+                            </div>
+                        </div>
+                        <div class="d-flex flex-row">
+                            <div class="p-4">
+                                <i class="fa fa-angle-right fa-3x"></i>
+                            </div>
+                            <div class="p-4 align-self-center">
+                                <h3>It's Flexible</h3>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Rate and change passenger status modal-->
 
 <!-- Modal Create Trip -->
-<div class="modal fade create-trip-modal" id="create-trip-modal" tabindex="-1" aria-labelledby="exampleModalLongTitle"
+<div class="modal fade create-trip-modal" id="create-trip-modal" tabindex="-1"
+     aria-labelledby="exampleModalLongTitle"
      aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -194,6 +245,77 @@
     </div>
 </div>
 
+
+<div class="main main-raised" id="easySearch">
+    <div class="container">
+        <div class="section text-center">
+            <!--                        SEARCH FORM                     -->
+            <form style="margin-left: 260px">
+                <div class="form-row align-items-center">
+                    <!--                        ORIGIN              -->
+                    <div class="col-auto">
+                        <label class="label-control" for="originSearch">Origin</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="originSearch" placeholder="From"
+                                   style="color: #000000;">
+                        </div>
+                    </div>
+
+                    <!--                        DESTINATION         -->
+                    <div class="col-auto">
+                        <label for="destinationSearch">Destination</label>
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="destinationSearch" placeholder="To"
+                                   style="color: #000000;">
+                        </div>
+                    </div>
+
+                    <div class="col-auto">
+                        <div class="form-group mb-4" style="background-color: white;">
+                            <label for="search_date_time" class="label-control">Date and time</label>
+                            <input type="text" class="form-control datetimepicker" value="01/08/2019"
+                                   id="search_date_time"/>
+                        </div>
+                    </div>
+
+
+                    <div class="col-auto">
+                        <button type="submit" class="btn btn-primary mb-2">Search</button>
+                    </div>
+                </div>
+            </form>
+            <h2 class="title">Trips</h2>
+            <div class="row" id="trip-body">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade create-trip-modal" id="single-trip-modal" tabindex="-1"
+     aria-labelledby="exampleModalLongTitle"
+     aria-hidden="true">
+</div>
+
+<div class="main main-raised" style="margin-top: 20px;" id="top-drivers">
+    <div class="container">
+        <div class="section text-center">
+            <h2 class="title">Top drivers</h2>
+            <table class="table table-striped">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col" id="rating">Driver Rating</th>
+                    <th scope="col">Username</th>
+                    <th scope="col">FirstName</th>
+                    <th scope="col">LastName</th>
+                </tr>
+                </thead>
+                <tbody id="top-ten-drivers">
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
 <div id="content"></div>
 
