--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -386,6 +386,21 @@
             </form>
             <h2 class="title">Trips</h2>
             <div class="row" id="trip-body"></div>
+            <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    </li>
+                    <li class="page-item"><a class="page-link" href="#" id="page1">1</a></li>
+                    <li class="page-item"><a class="page-link" href="#" id="page2">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#" id="page3">3</a></li>
+                    <li class="page-item"><a class="page-link" href="#" id="page4">4</a></li>
+                    <li class="page-item"><a class="page-link" href="#" id="page5">5</a></li>
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#">Next</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
