Moved detailed search trip functionality to loadTrips() method and added by origin filter.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -280,7 +280,7 @@
                     </div>
                 </div>
 
-                <!--                Destination -->
+                                Destination
                 <div class="form-group bmd-form-group">
                     <label for="car_model"><h5>Destination</h5></label>
                     <div class="input-group">
@@ -291,32 +291,32 @@
                     </div>
                 </div>
 
-                <!--                Earliest Date and time input-->
+<!--                                Earliest Date and time input
                 <div class="form-group">
                     <label for="date_time" class="label-control">Earliest date and time</label>
                     <input type="text" class="form-control datetimepicker" value="08/13/2019"
                            id="searchDateTimeEarliest"/>
                 </div>
 
-                <!--                Allow latest date and time input-->
-<!--                <div class="form-check">-->
-<!--                    <label class="form-check-label">-->
-<!--                        <input class="form-check-input" type="checkbox" id="showLatestDateForm">-->
-<!--                        Add latest date and time-->
-<!--                        <span class="form-check-sign">-->
-<!--                            <span class="check"></span>-->
-<!--                            </span>-->
-<!--                    </label>-->
-<!--                </div>-->
+                                Allow latest date and time input
+                <div class="form-check">
+                    <label class="form-check-label">
+                        <input class="form-check-input" type="checkbox" id="showLatestDateForm">
+                        Add latest date and time
+                        <span class="form-check-sign">
+                            <span class="check"></span>
+                            </span>
+                    </label>
+                </div>
 
-                <!--                Latest Date and time input-->
+                                Latest Date and time input
                 <div class="form-group dateTimeLatest">
                     <label for="date_time" class="label-control">Latest date and time</label>
                     <input type="text" class="form-control datetimepicker" value="08/13/2019"
                            id="searchDateTimeLatest"/>
                 </div>
 
-                <!--                Available places-->
+                &lt;!&ndash;                Available places&ndash;&gt;
                 <div class="form-group bmd-form-group">
                     <label for="inputState">Available places</label>
                     <select id="searchAvailablePlaces" class="form-control">
@@ -327,9 +327,9 @@
                     </select>
                 </div>
 
-                <!--                ALLOW   -->
+                &lt;!&ndash;                ALLOW   &ndash;&gt;
                 <div class="form-group bmd-form-group">
-                    <!--                Allow pets-->
+                    &lt;!&ndash;                Allow pets&ndash;&gt;
                     <div class="form-check">
                         <label class="form-check-label">
                             <input class="form-check-input" type="checkbox" id="searchIsAllowedPets">
@@ -339,7 +339,7 @@
                             </span>
                         </label>
                     </div>
-                    <!--                Allow smoking-->
+                    &lt;!&ndash;                Allow smoking&ndash;&gt;
                     <div class="form-check">
                         <label class="form-check-label">
                             <input class="form-check-input" type="checkbox" id="searchIsAllowedSmoking">
@@ -349,7 +349,7 @@
                             </span>
                         </label>
                     </div>
-                    <!--                Allow luggage-->
+                    &lt;!&ndash;                Allow luggage&ndash;&gt;
                     <div class="form-check">
                         <label class="form-check-label">
                             <input class="form-check-input" type="checkbox" id="searchIsAllowedLuggage">
@@ -360,7 +360,7 @@
                         </label>
                     </div>
 
-                    <!--                Sort parameters-->
+                    &lt;!&ndash;                Sort parameters&ndash;&gt;
                     <div class="form-group bmd-form-group">
                         <label for="inputState">Sort by:</label>
                         <select id="searchSortByParameter" class="form-control">
@@ -368,12 +368,12 @@
                             <option>Available places</option>
                             <option>Driver rating</option>
                         </select>
-                    </div>
+                    </div>-->
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="searchTrips()">Search
+                    <button type="button" class="btn btn-primary" data-dismiss="modal" onclick="loadTrips()">Search
                     </button>
                 </div>
             </div>
